2007-03-11  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/javax/management/openmbean/ArrayType/Constructor1.java:
	New test for the first constructor.
	* gnu/testlet/javax/management/openmbean/ArrayType/Constructor2.java:
	New test for the second constructor.
	* gnu/testlet/javax/management/openmbean/ArrayType/Equals.java:
	New test for equals(Object).
	* gnu/testlet/javax/management/openmbean/ArrayType/GetArrayType.java:
	New test for getArrayType(OpenType).
	* gnu/testlet/javax/management/openmbean/ArrayType/GetPrimitiveArrayType.java:
	New test for getPrimitiveArrayType(Class).
	* gnu/testlet/javax/management/openmbean/ArrayType/HashCode.java:
	New test for hashCode().
	* gnu/testlet/javax/management/openmbean/ArrayType/IsPrimitiveArray.java:
	New test for isPrimitiveArray().
	* gnu/testlet/javax/management/openmbean/ArrayType/IsValue.java:
	New test for isValue().
	
2007-03-05  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/javax/management/MBeanServerInvocationHandler/Colour.java:
	Test enumeration.
	* gnu/testlet/javax/management/MBeanServerInvocationHandler/MBeanProxy.java:
	Test for proxying.
	* gnu/testlet/javax/management/MBeanServerInvocationHandler/Test.java:
	Implementation of TestMBean.
	* gnu/testlet/javax/management/MBeanServerInvocationHandler/TestC.java:
	Implementation of TestCMXBean.
	* gnu/testlet/javax/management/MBeanServerInvocationHandler/TestCMXBean.java:
	Interface for an MXBean for conversion testing.	
	* gnu/testlet/javax/management/MBeanServerInvocationHandler/TestMBean.java:
	Interface for a test bean.
	* gnu/testlet/javax/management/MBeanServerInvocationHandler/TestX.java:
	Implementation of TestXMBean.
	* gnu/testlet/javax/management/MBeanServerInvocationHandler/TestXMBean.java:
	Interface for a test bean that extends Object's methods.
	* gnu/testlet/javax/management/MBeanServerPermission/Constructor.java:
	Test for MBeanServerPermission.
	
2007-02-22  Gary Benson  <gbenson@redhat.com>
