@@ -1,3 +1,10 @@
+2007-03-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* gnu/testlet/javax/management/openmbean/CompositeDataInvocationHandler/Person.java:
+	Interface for testing.
+	* gnu/testlet/javax/management/openmbean/CompositeDataInvocationHandler/Test.java:
+	Test javax.management.openmbean.CompositeDataInvocationHandler.
+	
 2007-03-11  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* gnu/testlet/javax/management/openmbean/ArrayType/Constructor1.java:
